Fix to make the fixture save files to the FitNesse files dir
This fixes the issue that files where saved in the root of the project when the fixture was run using the HSAC junit runner.