@@ -7,10 +7,25 @@ import fitnesse.slim.fixtureInteraction.InteractionAwareFixture;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public class SlimFixtureBase implements InteractionAwareFixture {
-    protected final Path wikiFilesDir = Paths.get(ContextConfigurator.DEFAULT_ROOT, "files");
+
+    private static final String FITNESSE_DIR = "wiki";
+    private final Path wikiFilesDir = Path.of(ContextConfigurator.DEFAULT_ROOT, "files");
+
+    /**
+     * Function to get the path to the wiki files directory.
+     * If the fixture is run from the project root (e.g. by using Maven and a junit runner)
+     * wiki/FitNesseRoot/files is returned. If run from the wiki FitNesseRoot/files is returned.
+     * @return relative path to wiki/FitNesseRoot/files
+     */
+    public Path getWikiFilesDir() {
+        return Boolean.TRUE.equals(runsInFitNesseDir()) ? wikiFilesDir : Path.of(FITNESSE_DIR).resolve(wikiFilesDir);
+    }
+
+    private Boolean runsInFitNesseDir() {
+        return System.getProperty("user.dir").endsWith(FITNESSE_DIR);
+    }
 
     @Override
     public Object aroundSlimInvoke(FixtureInteraction interaction, Method method, Object... arguments) throws InvocationTargetException {
